# Zynapse

./: LICENSE  docker-compose.yml
.github/workflows/: cd.yml  ci.yml
backend/: Dockerfile  pyproject.toml  test.py
backend/app/: config.py  main.py  repository.py  utils.py  worker.py
backend/app/core/: constants.py  db.py  models.py  schema.py
backend/app/helper/: parsers.py  utils.py
backend/app/services/: __init__.py  chat_agent.py  flow_agent.py  mcp.py  mind_map_agent.py  prompts.py  retrieval.py  summarizer.py  tools.py
backend/tests/: db_test.py
frontend/: package-lock.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/page/: page.tsx
frontend/src/components/: CreatePageModal.tsx  WavyBackground.tsx
frontend/src/hooks/: useTypewriter.ts
